objects/Contact.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merge_Conflicts__c</fullName>
        <label>Merge Conflicts</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone__c</fullName>
        <label>Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temp_Home_Phone__c</fullName>
        <label>Temp Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Community__c</fullName>
        <formula>text(Account.Community__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Community</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_From_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created From Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>ContactsCFO</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Active_Occupancy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Active Occupancy</label>
        <referenceTo>Occupancy__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Prospect__c</fullName>
        <label>Relationship to Prospect</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Created_From_Opportunity_Action__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Relationship_to_Prospect</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_From_Opportunity_Action__c</fullName>
        <defaultValue>&apos;No Filter&apos;</defaultValue>
        <label>Created From Opportunity Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add Influencer</fullName>
                </value>
                <value>
                    <fullName>Add Primary Resident</fullName>
                </value>
                <value>
                    <fullName>Add Second Resident</fullName>
                </value>
                <value>
                    <fullName>No Filter</fullName>
                    <default>true</default>
                    <label>No Filter</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Navihealth_eReferral_External_Id__c</fullName>
        <label>Navihealth eReferral External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Contact</fullName>
        <active>true</active>
        <description>Family Member/Influencer/Household Member of Prospect</description>
        <label>Contact</label>
    </recordTypes>
</CustomObject>